<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">username</string>
    <string name="username_input_hint">Plesase enter your username</string>
    <string name="password_label">Password</string>
    <string name="password_input_hint">Plesase enter your password</string>
    <string name="confirm_label">Confirm</string>
    <string name="confirm_input_hint">Plesase confirm your password</string>
    <string name="submit">Submit</string>
    <string name="random">Random</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_format">Welcome, %1$s !</string>

</resources>
